--- a/niuniu/events.yaml
+++ b/niuniu/events.yaml
@@ -14,18 +14,18 @@ glue_events:
       - "你的牛牛看起来很开心，但没有变化！😊"
       - "你在打胶时，感觉这个世界似乎发生了什么变化🤔"
     negative_descriptions:
-      - "哦吼！？看来你的牛牛凹进去了{diff_}cm呢！😱"
-      - "你突发恶疾！你的牛牛凹进去了{diff_}cm！😨"
-      - "笑死，你因为打🦶过度导致牛牛凹进去了{diff_}cm！🤣🤣🤣"
-      - "你的牛牛仿佛被你一🦶踢进了地缝，凹进去了{diff_}cm！🕳️"
-      - "你的一🦶用力过度了，牛牛凹进去了{diff_}cm！💥"
-      - "阿哦，你过度打🦶，牛牛缩短了{diff_}cm了呢！😢"
-      - "🦌的时候突然响起了届かない恋！你听了之后想起了自己的往事, 伤心之余发觉牛牛缩短了{diff_}cm。"
-      - "你的牛牛变长了很多，你很激动地继续打🦶，然后牛牛缩短了{diff_}cm呢！🤦‍♂️"
-      - "小打怡情，大打伤身，强打灰飞烟灭！你过度打🦶，牛牛缩短了{diff_}cm捏！💥"
-      - "你的牛牛看起来很受伤，缩短了{diff_}cm！🤕"
-      - "你的打🦶没效果，于是很气急败坏地继续打🦶，然后牛牛缩短了{diff_}cm呢！🤦‍♂️"
-      - "🦌太多次导致身体虚弱，牛牛长度减少了{diff_}cm!"
+      - "哦吼！？看来你的牛牛凹进去了{diff}cm呢！😱"
+      - "你突发恶疾！你的牛牛凹进去了{diff}cm！😨"
+      - "笑死，你因为打🦶过度导致牛牛凹进去了{diff}cm！🤣🤣🤣"
+      - "你的牛牛仿佛被你一🦶踢进了地缝，凹进去了{diff}cm！🕳️"
+      - "你的一🦶用力过度了，牛牛凹进去了{diff}cm！💥"
+      - "阿哦，你过度打🦶，牛牛缩短了{diff}cm了呢！😢"
+      - "🦌的时候突然响起了届かない恋！你听了之后想起了自己的往事, 伤心之余发觉牛牛缩短了{diff}cm。"
+      - "你的牛牛变长了很多，你很激动地继续打🦶，然后牛牛缩短了{diff}cm呢！🤦‍♂️"
+      - "小打怡情，大打伤身，强打灰飞烟灭！你过度打🦶，牛牛缩短了{diff}cm捏！💥"
+      - "你的牛牛看起来很受伤，缩短了{diff}cm！🤕"
+      - "你的打🦶没效果，于是很气急败坏地继续打🦶，然后牛牛缩短了{diff}cm呢！🤦‍♂️"
+      - "🦌太多次导致身体虚弱，牛牛长度减少了{diff}cm!"
     coefficient: 1.0
     category: "growth"
     buff:
