--- a/niuniu/events.yaml
+++ b/niuniu/events.yaml
@@ -31,7 +31,7 @@ glue_events:
     buff:
       duration: 300
       effect: 1.2
-    next_event: "normal_boost"
+    # next_event: "normal_boost"
     rapid_effect:
       positive_descriptions:
         - "这么着急？牛牛只微微增长了{diff}cm...🤏"
@@ -41,12 +41,12 @@ glue_events:
         - "bro你搞这么快只会适得其反！牛牛却减少了{diff}cm！😭"
       coefficient: 0.1
 
-  normal_boost:
-    weight: 10
-    positive_descriptions:
-      - "上次打胶的效果还在！牛牛又增加了{diff}cm！🔥"
-    coefficient: 1.5
-    category: "growth"
+  # normal_boost:
+  #   weight: 10
+  #   positive_descriptions:
+  #     - "上次打胶的效果还在！牛牛又增加了{diff}cm！🔥"
+  #   coefficient: 1.5
+  #   category: "growth"
 
   shrinkage:
     weight: 10
